--- a/app/scss/_free.scss
+++ b/app/scss/_free.scss
@@ -8,7 +8,7 @@
         overflow: hidden;
         &__image {
             &--mobile {
-                max-width: 375%;
+                max-width: 140%;
                 height: auto;
                 margin-bottom: 25px;
             }
