--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -11,9 +11,9 @@ html {
     padding: 0;
 }
 
-html {
-    scroll-behavior: smooth;
-}
+// html {
+//     scroll-behavior: smooth;
+// }
 
 body {
     font-family: 'Overpass', sans-serif;
