--- a/app/scss/styles.css
+++ b/app/scss/styles.css
@@ -20,10 +20,6 @@ html {
   padding: 0;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   font-family: 'Overpass', sans-serif;
 }
@@ -500,6 +496,24 @@ header {
   padding: 100px 40px;
 }
 
+.designed__img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.designed__img__image--mobile {
+  max-width: 125%;
+  height: auto;
+  margin-bottom: 25px;
+}
+
 .designed__img__image--desktop {
   display: none;
 }
@@ -680,7 +694,7 @@ header {
 }
 
 .free__img__image--mobile {
-  max-width: 375%;
+  max-width: 140%;
   height: auto;
   margin-bottom: 25px;
 }
